add models products

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -11,6 +11,7 @@
         }
     </style>
 </head>
+
 <body class="bg-[#121212] m-0 p-0">
     <div class="fixed items-center h-full w-full justify-center hidden" id='authPopup'>
         <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-99 h-110 w-100 rounded-xl bg-[#121212]">
@@ -30,29 +31,31 @@
     </div>
 
     <section class="h-screen" id="main">
-        <img class="absolute z-[-1] h-full w-full opacity-35" src="assets/pizza_bg.png" alt="Пицца"> 
+        <img class="absolute z-[-1] h-full w-full opacity-35" src="/static/pizza_bg.png" alt="Пицца">
         
         <header class="flex py-5 mx-5 justify-between z-10">
-            <div class="flex px-4 py-2 rounded-4xl bg-orange-600">
-                <h1 class="flex items-center font-bold text-xl text-white">Junior Pizza</h1>
+            <a href="{% url 'home' %}">
+                <div class="flex px-4 py-2 rounded-4xl bg-orange-600">
+                    <h1 class="flex items-center font-bold text-xl text-white">Junior Pizza</h1>
 
-                <svg class="size-10" fill="#ffffff" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                    viewBox="0 0 224.512 224.512" xml:space="preserve">
-                <g>
-                    <circle cx="89" cy="74.426" r="14.146"/>
-                    <path d="M112.256,126.77c-7.811,0-14.145,6.334-14.145,14.147c0,7.816,6.334,14.15,14.145,14.15c7.814,0,14.148-6.334,14.148-14.15
-                        C126.404,133.104,120.07,126.77,112.256,126.77z"/>
-                    <circle cx="133.563" cy="93.729" r="14.146"/>
-                    <path d="M195.287,16.574C168.741,5.576,140.776,0,112.169,0c-28.493,0-56.4,5.574-82.945,16.566
-                        c-1.838,0.762-3.298,2.223-4.06,4.061c-0.761,1.838-0.761,3.904,0.001,5.742l11.992,28.932c0.001,0.004,0.005,0.008,0.007,0.012
-                        l68.16,164.574c1.168,2.818,3.917,4.625,6.926,4.625c0.218,0,0.437-0.01,0.656-0.029c2.85-0.248,5.271-2.088,6.311-4.682
-                        l68.143-164.49c0.002-0.004,0.004-0.006,0.006-0.01l11.98-28.928C200.93,22.545,199.113,18.158,195.287,16.574z M112.169,15
-                        c24.133,0,47.778,4.264,70.397,12.688l-6.246,15.08c-20.618-7.598-42.157-11.445-64.138-11.445
-                        c-21.896,0-43.382,3.848-63.982,11.443L41.946,27.68C64.554,19.262,88.141,15,112.169,15z M112.254,197.416L53.949,56.643
-                        c18.766-6.846,38.317-10.32,58.232-10.32c20,0,39.605,3.477,58.389,10.324L112.254,197.416z"/>
-                </g>
-                </svg>
-            </div>
+                    <svg class="size-10" fill="#ffffff" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 224.512 224.512" xml:space="preserve">
+                    <g>
+                        <circle cx="89" cy="74.426" r="14.146"/>
+                        <path d="M112.256,126.77c-7.811,0-14.145,6.334-14.145,14.147c0,7.816,6.334,14.15,14.145,14.15c7.814,0,14.148-6.334,14.148-14.15
+                            C126.404,133.104,120.07,126.77,112.256,126.77z"/>
+                        <circle cx="133.563" cy="93.729" r="14.146"/>
+                        <path d="M195.287,16.574C168.741,5.576,140.776,0,112.169,0c-28.493,0-56.4,5.574-82.945,16.566
+                            c-1.838,0.762-3.298,2.223-4.06,4.061c-0.761,1.838-0.761,3.904,0.001,5.742l11.992,28.932c0.001,0.004,0.005,0.008,0.007,0.012
+                            l68.16,164.574c1.168,2.818,3.917,4.625,6.926,4.625c0.218,0,0.437-0.01,0.656-0.029c2.85-0.248,5.271-2.088,6.311-4.682
+                            l68.143-164.49c0.002-0.004,0.004-0.006,0.006-0.01l11.98-28.928C200.93,22.545,199.113,18.158,195.287,16.574z M112.169,15
+                            c24.133,0,47.778,4.264,70.397,12.688l-6.246,15.08c-20.618-7.598-42.157-11.445-64.138-11.445
+                            c-21.896,0-43.382,3.848-63.982,11.443L41.946,27.68C64.554,19.262,88.141,15,112.169,15z M112.254,197.416L53.949,56.643
+                            c18.766-6.846,38.317-10.32,58.232-10.32c20,0,39.605,3.477,58.389,10.324L112.254,197.416z"/>
+                    </g>
+                    </svg>
+                </div>
+            </a>
 
 
             <nav class="items-center flex">
@@ -103,17 +106,19 @@
         <p class="text-white text-4xl font-bold">Пиццы</p>
         <div class="mt-10 gap-10 grid-cols-4 grid">
 
-            <div class="max-w-80 cursor-pointer hover:-translate-y-2 transition duration-300">
-                <img src="assets/pizza1.png" alt="pizza1" class="h-80 w-80">
-                <p class="text-white text-xl font-medium py-1">Креветки и Песто</p>
-                <p class="text-white opacity-75 text-sm font-light py-1">Креветки, томаты, шампиньоны, соус песто, моцарелла, итальянские травы, фирменный томатный соус</p>
-                <div class="flex justify-between">
-                    <p class="text-white text-xl font-medium text-center flex items-center">от 500 ₽</p>
-                    <button class="cursor-pointer font-medium text-xl py-0.5 px-1 bg-orange-600 rounded-4xl text-white">
-                        В корзину 
-                    </button>
+            {% for product in products %}
+                <div class="max-w-80 cursor-pointer hover:-translate-y-2 transition duration-300">
+                    <img src="static/pizza1.png" alt="pizza1" class="h-80 w-80">
+                    <p class="text-white text-xl font-medium py-1">{{ product.name }}</p>
+                    <p class="text-white opacity-75 text-sm font-light py-1">{{ product.compound }}</p>
+                    <div class="flex justify-between">
+                        <p class="text-white text-xl font-medium text-center flex items-center">от {{ product.price }} ₽</p>
+                        <button class="cursor-pointer font-medium text-xl py-0.5 px-1 bg-orange-600 rounded-4xl text-white">
+                            В корзину 
+                        </button>
+                    </div>
                 </div>
-            </div>
+            {% endfor %}
 
         </div>
         
@@ -155,6 +160,6 @@
 
         
     </footer>
-    <script src="index.js"></script>
+    <script src="static/index.js"></script>
 </body>
 </html>
